sandbox/output
ProfitFPTest.java:52: error: cannot find symbol
                (time) -> sales.valueAt(time) -
                               ^
  symbol:   method valueAt(int)
  location: variable sales of type IntToDoubleFunction
ProfitFPTest.java:53: error: cannot find symbol
                (fixedCosts.valueAt(time) +
                           ^
  symbol:   method valueAt(int)
  location: variable fixedCosts of type IntToDoubleFunction
ProfitFPTest.java:54: error: cannot find symbol
                        incrementalCosts.valueAt(time));
                                        ^
  symbol:   method valueAt(int)
  location: variable incrementalCosts of type IntToDoubleFunction
ProfitFPTest.java:59: error: cannot find symbol
            totalProfits += profit.valueAt(time);
                                  ^
  symbol:   method valueAt(int)
  location: variable profit of type IntToDoubleFunction
4 errors
